--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest-sonar": "0.2.12",
     "prettier": "2.4.0",
     "ts-jest": "27.0.5",
-    "ts-node": "10.2.1"
+    "ts-node": "10.2.1",
+    "typescript": "4.4.3"
   }
 }
