--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node -r source-map-support/register ../build/client/run.js",
-    "debug": "tsc && node -r source-map-support/register ../build/client/run.js",
+    "start": "node -r source-map-support/register build/run.js",
+    "debug": "tsc && node -r source-map-support/register build/run.js",
     "build": "tsc"
   },
   "devDependencies": {
     "dotenv": "10.0.0",
     "source-map-support": "0.5.20",
     "typescript": "4.4.3"
+  },
+  "dependencies": {
+    "@types/node": "^16.10.5",
+    "socket.io-client": "^4.2.0"
   }
 }
