--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node -r source-map-support/register ../build/server/run.js",
-    "debug": "tsc && node -r source-map-support/register ../build/server/run.js",
+    "start": "node -r source-map-support/register build/run.js",
+    "debug": "tsc && node -r source-map-support/register build/run.js",
     "build": "tsc"
   },
   "devDependencies": {
     "dotenv": "10.0.0",
     "source-map-support": "0.5.20",
     "typescript": "4.4.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.5",
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0"
   }
 }
