--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.5",
+    "cowsay": "^1.5.0",
     "express": "^4.17.1",
     "socket.io": "^4.2.0"
   }
